package com.example.p5ex1;

public abstract class Vehicle {

        public abstract void start();

        public abstract void Stop();

        public abstract void Eccelerate();

    }

